--- a/CSS-MySite/CSS/styles.css
+++ b/CSS-MySite/CSS/styles.css
@@ -1,3 +1,34 @@
+
+h1 {
+
+}
+
 body {
-    background-color: blue;
+    
+    margin: 0;
+    
+}
+
+.top-container {
+    height: 200px;
+    width: 200px;
+    padding-left: 20px;
+    padding-right: 20px;
+    border: solid 10px;
+    background-color: #99f3bd;
+}
+
+.middle-container {
+    background-color: khaki;
+    width: 200px;
+    height: 200px;
+    margin-left: 260px;
+}
+
+.bottom-container {
+    background-color: lightgreen;
+    width: 200px;
+    height: 200px;
+    margin-left: 460px;
+  
 }
