--- a/CSS-MySite/CSS/styles.css
+++ b/CSS-MySite/CSS/styles.css
@@ -1,34 +1,45 @@
 
-h1 {
-
-}
-
 body {
     
     margin: 0;
-    
+    text-align: center;
+}
+
+h1 {
+    margin-top: 0;
+
 }
 
 .top-container {
-    height: 200px;
-    width: 200px;
-    padding-left: 20px;
-    padding-right: 20px;
-    border: solid 10px;
-    background-color: #99f3bd;
+    padding-top: 100px;
+    background-color: #E4F9F5;
 }
 
 .middle-container {
-    background-color: khaki;
+    background-color: red;
     width: 200px;
     height: 200px;
-    margin-left: 260px;
 }
 
 .bottom-container {
-    background-color: lightgreen;
+    background-color: blue;
     width: 200px;
     height: 200px;
-    margin-left: 460px;
-  
+}
+
+.pro {
+    
+    text-decoration: underline;
+}
+
+.top-cloud{
+    position: absolute;
+    right: 300px;
+    top: 50px;
+}
+
+.bottom-cloud {
+    position: absolute;
+    bottom: 300px;
+    top:300px;
 }
