--- a/CSS-MySite/CSS/styles.css
+++ b/CSS-MySite/CSS/styles.css
@@ -3,11 +3,26 @@ body {
     
     margin: 0;
     text-align: center;
+    font-family: 'Merriweather', serif;
+
 }
 
 h1 {
-    margin-top: 0;
+    font-size: 5.625rem; 
+    margin: 50px auto 0 auto;
+    font-family: 'Sacramento', cursive;
+    color: #66BFBF;
+}
 
+h2 {
+    font-family: 'Montserrat', sans-serif;
+    font-size: 2.5rem; 
+    color: #66BFBF;
+}
+
+h3 {
+    font-family: 'Montserrat', sans-serif;
+    color: #11999E;
 }
 
 .top-container {
@@ -16,15 +31,29 @@ h1 {
 }
 
 .middle-container {
-    background-color: red;
-    width: 200px;
-    height: 200px;
+
 }
 
 .bottom-container {
-    background-color: blue;
-    width: 200px;
+    color: #11999E;
+}
+
+.profilePic{
+    border-radius: 50%;
     height: 200px;
+    width: 200px;
+}
+
+.programmingImg {
+    border-radius: 50%;
+    height: 200px;
+    width: 500px;
+}
+
+.cpp_img {
+    border-radius: 50%;
+    height: 200px;
+    width: 500px;
 }
 
 .pro {
@@ -34,7 +63,7 @@ h1 {
 
 .top-cloud{
     position: absolute;
-    right: 300px;
+    right: 100px;
     top: 50px;
 }
 
