--- a/TinDog-Start/css/styles.css
+++ b/TinDog-Start/css/styles.css
@@ -8,29 +8,34 @@ body {
 }
 
 .container-fluid {
-    padding: 3% 15%;
+    padding: 3% 15% 7%;
 }
 
-h1 {
-    font-family: "Montserrat-Black";
-    font-size: 3.5rem;
-    line-height: 1.5;
-}
-
-h2 {
+h1, h2, h3, h4, h5, h6 {
     font-family: "Montserrat-Bold";
-    font-size: 3rem;
-    line-height: 1.5;
 }
 
 h3 {
-    font-family: "Montserrat-Bold";
-    /* font-weight: bold; */
+    font-size: 1.5rem;
 }
 
 p {
     color: #8f8f8f;
 }
+
+/* Headings */
+.big-heading {
+    font-family: "Montserrat-Black";
+    font-size: 3.5rem;
+    line-height: 1.5;
+}
+
+.section-heading {
+    font-size: 3rem;
+    line-height: 1.5;
+}
+
+
 /* Navigation Bar */
 
 .navbar {
@@ -63,13 +68,16 @@ p {
 .title-image {
     width: 60%;
     transform: rotate(30deg);
-    padding-left: 20%;
+    position: absolute;
+    right: 30%;
 }
 
 /* Features section */
 
 #features {
     padding: 7% 15%;
+    background-color: white;
+    position: relative;
 }
 
 .feature-box {
@@ -95,6 +103,11 @@ p {
     color: #fff;
 }
 
+.testimonial-text {
+    font-size: 3rem;
+    line-height: 1.5;
+}
+
 .testimonial-image {
     width: 10%;
     border-radius: 100%;
@@ -116,3 +129,63 @@ p {
     width: 15%;
     margin-bottom: 20px 20px 50px;
 }
+
+
+/* Pricing Section */
+
+#pricing {
+    padding: 100px;
+    text-align: center;
+}
+
+.price-text {
+    font-size: 3rem;
+    line-height: 1.5;
+}
+
+.pricing-column {
+    padding: 3% 2%;
+}
+
+/* CTA Section */
+
+#cta {
+    background-color: #ff4c68;
+    color: #fff;
+    padding: 7% 15%;
+    text-align: center;
+}
+
+.cta-heading {
+    font-family: "Montserrat-Black";
+    font-size: 3.5rem;
+    line-height: 1.5;
+    text-align: center;
+}
+
+/* Footer Section */
+
+#footer {
+    background-color: #fff;
+    padding: 7% 15%;
+    text-align: center;
+
+
+}
+
+.social-icon {
+    margin: 20px 10px;
+}
+
+@media (max-width: 1028px) {
+
+    #title {
+        text-align: center;
+    }
+
+    .title-image {
+        position: static;
+        transform: rotate(0);
+    }
+}
+
